--- a/portfolio/Stone/index.html
+++ b/portfolio/Stone/index.html
@@ -11,14 +11,14 @@
     <title>Stone</title>
 </head>
 <body>
-    <header class="header" id="header">
+    <header class="header">
         <div class="container">
             <div class="header__logo">
                 <img src="icons/stone.svg" alt="logo-photo">
                 <div class="header__logo-name">stone</div>
             </div>
             <nav class="nav" id="nav">
-                <a href="#header" ><div class="nav__link">Home</div></a>
+                <a href="#home" ><div class="nav__link">Home</div></a>
                 <a href="#" ><div class="nav__link">Work</div></a>
                 <a href="#footer" ><div class="nav__link">Contact</div></a>
             </nav>
@@ -34,7 +34,7 @@
 
     </header>
 
-    <section class="intro">
+    <section class="intro" id="home">
         <div class="container">
             <h1 class="title">We keep things <br>
                 clean and simple</h1>
