--- a/portfolio/Stone/index.html
+++ b/portfolio/Stone/index.html
@@ -11,7 +11,7 @@
     <title>Stone</title>
 </head>
 <body>
-    <header class="header">
+    <header class="header" id="header">
         <div class="container">
             <div class="header__logo">
                 <img src="icons/stone.svg" alt="logo-photo">
