--- a/portfolio/Stone/index.html
+++ b/portfolio/Stone/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="icons/stone.svg" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Vollkorn&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="css/style.min.css">
@@ -46,21 +47,21 @@
 
     <section class="features">
         <div class="container">
-            <div class="features__item">
+            <div class="features__item" data-aos="fade-down" data-aos-delay="100">
                 <h3 class="item__title">RESEARCH</h3>
                 <img src="img/bulb.png" alt="" class="item__img">
                 <p class="item__text">Lorem ipsum dolor sit amet, 
                     consectetur adipiscing elit. Suspendisse varius
                      enim in eros elementum.</p>
             </div>
-            <div class="features__item">
+            <div class="features__item" data-aos="fade-down" data-aos-delay="200">
                 <h3 class="item__title">BUILD</h3>
                 <img src="img/tablets.png" alt="" class="item__img">
                 <p class="item__text">Lorem ipsum dolor sit amet, 
                     consectetur adipiscing elit. Suspendisse varius 
                     enim in eros elementum.</p>
             </div>
-            <div class="features__item">
+            <div class="features__item" data-aos="fade-down" data-aos-delay="300">
                 <h3 class="item__title">OPTIMIZE</h3>
                 <img src="img/optimize.png" alt="" class="item__img">
                 <p class="item__text">Lorem ipsum dolor sit amet, 
@@ -122,7 +123,7 @@
             <div class="title">TESTIMONIALS</div>
             <div class="line"></div>
             <div class="wrapper">
-                <div class="comment">
+                <div class="comment" data-aos="fade-right" data-aos-duration="1000">
                     <div class="comment_text">
                         Vestibulum sed commodo nunc, eu aliquet sem. 
                         Curabitur semper, sem ut posuere tincidunt, 
@@ -132,7 +133,7 @@
                     </div>
                     <div class="comment__author">Robert Shapiro, CEO of trulr</div>          
                 </div>
-                <div class="comment">
+                <div class="comment" data-aos="fade-right" data-aos-duration="1000">
                     <div class="comment_text">
                         Curabitur semper, sem ut posuere tincidunt, 
                         sem velit sollicitudin odio, quis hendrerit 
@@ -156,7 +157,7 @@
     </footer>
 
     <a href="#header" class="scroll_up"><img src="icons/up-arrow.svg" alt="arrow_up"></a>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/script.js"></script>
 
 </body>
